infra/helm/elastic-stack/manual/ingress-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: monitoring
  labels:
    app: kibana
    chart: kibana-1.1.0
    heritage: Tiller
    release: kibana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin otus'
spec:
  rules:
  - host: kibana.yc-infra.otus-project.solutions
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 443
        path: /
  tls:
  - hosts:
    - kibana.yc-infra.otus-project.solutions
    secretName: ssl-kibana-dev
